--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Direct Upload Demo | Cloudflare Pages</title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head><meta content="text/html; charset=UTF8" http-equiv="content-type">
-<title>Under Construction</title>
-</head>
-<body alink="#000099" bgcolor="#E6E8E5" link="#000099" text="#000000" vlink="#990099"><br>
-<br>
-<div align="center"><big><big><big><big><big>Under Construction2...</big></big></big></big></big><br>
-<br>
-<br>
-<br>
-<img alt="&#26045;&#24037;&#20013;" src="img.png" height="350" width="700"><br>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h3>Example project</h3>
+        <h1>Welcome to Cloudflare Pages</h1>
+        <p>
+          Upload your prebuilt assets directly to Pages and deploy <br />
+          your project to the Cloudflare edge within seconds.
+        </p>
+        <p>Create new deployments using:</p>
+        <section class="options">
+          <img src="assets/terminal.svg" />
+          <a
+            href="https://dash.cloudflare.com/?to=/:account/pages/new/wrangler-guide"
+            target="_blank"
+            > Wrangler CLI</a
+          >
+          <img src="assets/cloud-upload.svg" />
+          <a
+            href="https://dash.cloudflare.com/?to=/:account/pages/new/upload"
+            target="_blank"
+            > Dashboard</a
+          >
+        </section>
+      </div>
 
-
-</div>
-</body></html>
+      <section class="learn-more">
+        <a
+          href="https://developers.cloudflare.com/pages/platform/direct-uploads"
+        >
+          <button>Learn more</button>
+        </a>
+      </section>
+      <div class="logo">
+        <a href="https://pages.cloudflare.com/" target="_blank">
+          <img src="assets/cloudflare-pages.svg"
+        /></a>
+      </div>
+    </div>
+  </body>
+</html>
